# arduino-uno

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs  rc522.rs  serial.rs
