[package]
name = "arduino"
version = "0.1.0"
authors = ["Thomas Sauvajon <thomas@sauvajon.tech>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino"
test = false
bench = false

[dependencies]
panic-halt = "0.2"
ufmt = "0.2"
nb = "1.1"
embedded-hal = "0.2"
mfrc522 = "0.6"
avr-device = "0.5"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
